--- a/Portfolio/css/stylesheet_Startseite.css
+++ b/Portfolio/css/stylesheet_Startseite.css
@@ -1,3 +1,52 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+
+	border: 0;
+  margin: 0;
+  padding 0;
+
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 /* ----------- Allgemeine Formatierung ----------- */
 body {
   font-family: Avenir;
@@ -10,7 +59,10 @@ padding-top: 60px;
 
 p {
   text-align: center;
-  padding: 10px 200px 0px 200px;
+  padding: 10px;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
@@ -75,8 +127,8 @@ li.navigation_liste {
   font-size: 23px;
 }
 
-li.navigation_liste: hover {
-  background-color: white
+li.navigation_liste a:hover {
+  font-weight: bold;
 }
 
 nav#navigation {
