Responsive Background verbessert

--- a/Portfolio/css/stylesheet_Startseite.css
+++ b/Portfolio/css/stylesheet_Startseite.css
@@ -72,14 +72,17 @@ h1 {
 
 h1#about_headline {
   padding-top: 90px;
+  padding-bottom: 10px;
 }
 
 h1#portfolio_headline {
-  padding-top: 100px
+  padding-top: 100px;
+  padding-bottom: 10px;
 }
 
 h1#contact_headline {
-  padding-top: 50px;
+  padding-top: 70px;
+  padding-bottom: 20;
 }
 
 div {
@@ -93,19 +96,34 @@ a {
 }
 
 /* ------------------- Fotoboxen ------------------ */
+
+
 div#home_foto {
-  background-color: #e9967a}
-  /*background-image: url(hintergruende/ubahn2.png);
-background-size: 100% auto;}*/
+  background-size: 100% auto;
+  background: url(hintergruende/staturc.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
 
 div#foto_1 {
-  background-image: url(hintergruende/stairs_neu.png);
   background-size: 100% auto;
+  background: url(hintergruende/stairs_neu.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 div#foto_2 {
-  background-image: url(hintergruende/staturc.png);
   background-size: 100% auto;
+  background: url(hintergruende/staturc.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 div.foto {
@@ -120,20 +138,41 @@ div.text {
 
 /* --------------- Navigation Menü ----------------- */
 
-li.navigation_liste {
-  text-align: center;
-  padding-left: 80px;
-  display: inline-block;
-  font-size: 23px;
+#navigation ul {
+  margin: 0;
+  padding: 0;
 }
 
-li.navigation_liste a:hover {
+.navigation_liste {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 23px;
+  min-width: 100px;
+}
+
+.navigation_liste a:hover {
   font-weight: bold;
 }
 
 nav#navigation {
 padding-top: 30px;
 }
+
+/* Mobile Styles */
+
+@media screen and (min-width: 680px) {
+
+  #navigation {
+    text-align: center;
+  }
+
+  .navigation_liste {
+    display: inline-block;
+  }
+
+}
+
 
 /* -------------- Navigation Portfolio ------------- */
 li.icons_liste {
@@ -153,11 +192,13 @@ img.icons_pics {
 
 nav#icons_navigation {
 text-align: center;
+padding-top: 30px;
 }
 
 /* ----------------- Facebooklink ------------------ */
 img#facebooklink {
   display: block;
+  padding-top: 20px;
   margin: 0 auto;
 }
 
